--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "mcdonalds",
+  "homepage": "https://ErenaShah.github.io/frontend-fusion-Reminage-Round1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.2.11",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
